# alignment-handbook

./: README.md  pyproject.toml
recipes/fromSimPO/: Qwen3-0.6B.yaml  Qwen3-0.6B_fourchan.yaml  Qwen3-4B-fourchan.yaml  Qwen3-4B-sft.yaml  SmolLM2-1.7B-sft.yaml  SmolLM2-135M.yaml  SmolLM2-360M.yaml  llama-3-2-1b-base-sft copy.yaml  llama-3-2-1b-base-sft.yaml  llama-3-2-3b-base-sft.yaml  llama-3-8b-base-sft.yaml
recipes/smollm/sft/: config.yaml
recipes/smollm2/sft/: config.yaml  config_smol.yaml
scripts/: run_sft.py  upload.ipynb
